# jldev_poetry_2023

./: Dockerfile  Makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
