[tool.poetry]
name = "jldev_poetry"
packages = [
    { include = "pytools", from = "src"},
]
version = "0.1.0"
description = "Enhance your JOps (= Julia + Python/Poetry + VSCode + JupyterLab + Docker + Pluto)"
authors = ["SatoshiTerasaki <terasakisatoshi.math@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.5.0"
numpy = "^1.22.0"
sympy = "^1.9"
pandas = "^1.3.4"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
ipykernel = "^6.6.0"
ipywidgets = "^8.1.1"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.2.5"
jupyter-pluto-proxy = {git = "https://github.com/IllumiDesk/jupyter-pluto-proxy.git", rev = "main"}
jupyterlab-code-formatter = "^1.4.10"
jupytext = "^1.13.3"
mypy = "^0.910"
nbconvert = "^6.5.1"
poethepoet = "^0.24.4"
pytest = "^7.4"
webio-jupyter-extension = "^0.1.0"
jupyterlab-topbar = "^0.6.1"
jupyterlab-topbar-text = "^0.6.2"
jupyterlab-system-monitor = "^0.8.0"
jupyter-server-proxy = "^4.1.0"
tokenize-rt = "^4.2.1"
ipython = "^8.12.3"
jupyterlab-sublime = "^0.4.1"

[tool.poe.tasks]
test = "pytest"
mypy = { shell = "mypy ." }
black = { shell = "black . && black playground/notebook" }
sync = { shell = "jupytext --sync playground/notebook/**/*.ipynb" }
format = ["black", "sync"]
lab = { shell = "jupyter lab" }

[tool.pytest.ini_options]
testpaths=[
	"test",
]

[tool.black]
line-length = 120
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
