[tool.poetry]
name = "jldev_poetry"
packages = [
    { include = "pytools", from = "src"},
]
version = "0.1.0"
description = "Enhance your JOps (= Julia + Python/Poetry + VSCode + JupyterLab + Docker + Pluto)"
authors = ["SatoshiTerasaki <terasakisatoshi.math@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.5.0"
numpy = "^1.26.4"
sympy = "^1.9"
pandas = "^2.2.0"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
ipykernel = "^6.29.2"
ipywidgets = "^8.1.2"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.2.5"
jupyter-pluto-proxy = {git = "https://github.com/IllumiDesk/jupyter-pluto-proxy.git", rev = "main"}
jupyterlab-code-formatter = "^2.2.1"
jupytext = "^1.13.3"
mypy = "^1.8"
nbconvert = "^7.16.0"
poethepoet = "^0.24.4"
pytest = "^8.2"
webio-jupyter-extension = "^0.1.0"
jupyterlab-topbar = "^0.6.1"
jupyterlab-topbar-text = "^0.6.2"
jupyterlab-system-monitor = "^0.8.0"
jupyter-server-proxy = "^4.1.0"
tokenize-rt = "^5.2.0"
ipython = "^8.12.3"
jupyterlab-sublime = "^0.4.1"

[tool.poe.tasks]
test = "pytest"
mypy = { shell = "mypy ." }
black = { shell = "black . && black playground/notebook" }
sync = { shell = "jupytext --sync playground/notebook/**/*.ipynb" }
format = ["black", "sync"]
lab = { shell = "jupyter lab" }

[tool.pytest.ini_options]
testpaths=[
	"test",
]

[tool.black]
line-length = 120
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
